--- a/app/index.html
+++ b/app/index.html
@@ -18,10 +18,17 @@
 <body ng-app="createANote">
 	<ui-view></ui-view>
 
+		<script type="text/javascript" src="create-a-note/createANote.module.js"></script>
+	<script type="text/javascript" src="create-a-note/features/home/home.module.js"></script>
+	<script type="text/javascript" src="create-a-note/features/home/home.route.js"></script>
+	<script type="text/javascript" src="create-a-note/features/home/home.controller.js"></script>
+	
 	<script type="text/javascript" src="create-a-note/createANote.module.js"></script>
 	<script type="text/javascript" src="create-a-note/features/dashboard/dashboard.module.js"></script>
 	<script type="text/javascript" src="create-a-note/features/dashboard/dashboard.route.js"></script>
 	<script type="text/javascript" src="create-a-note/features/dashboard/dashboard.controller.js"></script>
+
+
 
 </body>
 </html>
